[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flet-router"
version = "1.0.0"
authors = [
  { name="Taogya", email="taogya.sfh@gmail.com" },
]
description = "flet router"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "flet>=0.23.0",
]
[tool.hatch.build]
include = [
    "flet_router/*",
]
exclude = [
    "build",
    "sample",
]

[project.urls]
"Homepage" = "https://github.com/taogya/flet_router"
"Bug Tracker" = "https://github.com/taogya/flet_router/issues"